# dds-runtime-type-introspection-investigation

./: .gitignore  README.md
src/: CMakeLists.txt
src/dynamic_data_access_union_discriminator/src/: CMakeLists.txt
src/dynamic_data_nested_structs/src/: CMakeLists.txt
src/dynamic_data_request_reply/src/: CMakeLists.txt
src/dynamic_data_sequences/src/: CMakeLists.txt
src/dynamic_data_using_publisher_subscriber/src/: CMakeLists.txt
src/rti_connext/examples/connext_dds/: CMakeLists.txt
src/rti_connext_dds/: CMakeLists.txt
src/rti_connext_dds/c/dynamic_data_access_union_discriminator/src/: CMakeLists.txt
src/rti_connext_dds/c/dynamic_data_nested_structs/src/: CMakeLists.txt
src/rti_connext_dds/c/dynamic_data_sequences/src/: CMakeLists.txt
src/rti_connext_dds/c/dynamic_data_using_publisher_subscriber/src/: CMakeLists.txt
src/rti_connext_dds/cpp/dynamic_data_access_union_discriminator/src/: CMakeLists.txt  README.md
src/rti_connext_dds/cpp/dynamic_data_nested_structs/src/: CMakeLists.txt  README.md  dynamic_data_nested_struct_example.cxx
src/rti_connext_dds/cpp/dynamic_data_request_reply/src/: CMakeLists.txt
src/rti_connext_dds/cpp/dynamic_data_sequences/src/: CMakeLists.txt  README.md
src/rti_connext_dds/cpp/dynamic_data_using_publisher_subscriber/src/: CMakeLists.txt  README.md
src/rti_connext_dds/resources/markdown_templates/: CExampleTemplate.md
